# expressEngine/route.js
@@ -6,19 +6,13 @@ import UserRoute from './user/route';
 import OrderRoute from './order/route';
 import ProductRoute from './product/route';
 
+import { Parser } from './user/parser';
+import checkAuth from './check-auth';
+
 const app = express();
 
-app.use('/', (req, res, next) => { // to be used to authenticate request
-  const { headers } = req;
-  if (headers.authkey !== 'successive') {
-    return res.status(403).json({
-      error: true,
-      message: 'Forbidden',
-    });
-  }
-  next();
-});
-app.use('/user', UserRoute);
-app.use('/order', OrderRoute);
-app.use('/products', ProductRoute);
+app.post('/login', Parser.createToken);
+app.use('/user', checkAuth, UserRoute);
+app.use('/order', checkAuth, OrderRoute);
+app.use('/products', checkAuth, ProductRoute);
 export default app;
